test/basicapp/v1/routes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: basicapp-destination
spec:
  name: basicapp
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: basicapp
spec:
  hosts:
  - basicapp.default.svc.cluster.local
  http:
  - route:
    - destination:
        name: basicapp
        subset: v1


# apiVersion: config.istio.io/v1alpha2
# kind: RouteRule
# metadata:
#   name: basicapp-default
#   namespace: default
# spec:
#   destination:
#     name: basicapp
#   precedence: 1
#   route:
#   - labels:
#       version: v1
